--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# # Application Name
 spring.application.name=keycloak-reactive
+spring.security.oauth2.client.registration.keycloak.client-id=springboot-keycloak
+spring.security.oauth2.client.registration.keycloak.client-secret=sTRDaApUgiargPF32RA3bW6Ad8uWsJSp
+spring.security.oauth2.client.registration.keycloak.scope=openid, profile, email, roles
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8180/realms/oauth2-learning-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/oauth2-learning-realm
